# WhatsappCryptDecryptor

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  build.sh  conanfile.py
include/: Crypt15Decryptor.h  DecryptionManager.h  FileEntry.h  IDecryptor.h  Key15.h  Mcrypt1Decryptor.h  logging.h  utils.h
proto/: C14Cipher.proto  C15IV.proto  backupExpiry.proto  backupPrefix.proto
src/: Crypt15Decryptor.cpp  DecryptionManager.cpp  Key15.cpp  Mcrypt1Decryptor.cpp  logging.cpp  main.cpp  utils.cpp
tests/: AesCbcDecryptTests.cpp  AesGcmTests.cpp  Base64DecodeTests.cpp  EncryptionLoopTest.cpp  EncryptionLoopTest.h  FileTimeConversionTests.cpp  FromHexTests.cpp  HkdfDerivationTests.cpp  ISO8601Test.cpp  MetadataDecryptionTests.cpp  MetadataInfoTests.cpp  ReadBinaryFileTests.cpp  ReadTextFileTests.cpp  ZlibDecompressionTests.cpp  test_utils.cpp
